[package]
name = "udp_latency_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cpal = "0.15.3"
ndarray = "0.15.6"
opus = "0.3.0"
ringbuf = "0.4.1"
ringbuffer = "0.15.0"
rtcp = "0.11.0"
rtp = "0.11.0"
rtp-rs = "0.6.0"
rtrb = "0.3.1"
rustfft = "6.2.0"
socket2 = "0.5.7"
webrtc-audio-processing = { version = "0.4.0", features = ["bundled"]}
webrtc-vad = "0.4.0"
